[package]
name = "rsa-vdf"
version = "0.0.1"
edition = "2018"
description = "Verifiable Delay Function (Wesolowski 18)"
authors = [
    "Omer <omer.shlomovits@gmail.com>",
]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies.curv]
git = "https://github.com/ZenGo-X/curv"
tag = "v0.6.1"
default-features = false

[features]
default = ["curv/num-bigint"]
